# ecommerce-dicria-backend-mrlomnds

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
_dicria_sports/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py  serializers.py
accounts/migrations/: 0001_initial.py  0002_remove_account_phone_number_alter_account_email.py  0003_account_phone_number_alter_account_email.py  0004_alter_account_is_staff.py
